# wk

./: .buildinfo  .gitignore  00QC.html  README.html  _config.yml  _toc.yml  genindex.html  intro.html  intro.ipynb  nb2022.html  nb2024.html  objects.inv  qc.html  qc.ipynb  qc_strategy.html  qc_strategy.ipynb  search.html  searchindex.js  章节 七：高级量化交易方法  章节一：量化交易的基本概念  章节三：回测  章节二：如何寻找寻找交易策略  章节五：执行系统  章节八：独立交易者能成功吗？  章节六：资金管理与风险控制  章节四：建立量化交易业务  章节：移动平均数（SMA）的交易策略
.github/workflows/: deploy.yml
0alphas-using qstrader有3sources/: README.html  计算和策略化.docx
0alphas-using qstrader有3sources/计算ipynb_case/: 1_sample_selection.html  2_ta_alpha_factors.html  3_formulaic_alphas.html  4_factor_evaluation.html  5_performance_eval_alphalens_single_factor.html  6_performance_eval_alphalens_multi_factor.html  Bayesian_Optimization.html  Continuous_Action_Space_Deep_RL.html  Entropy_Microstructural_features.html  Fractional_differentiation.html  Graph_Attention_Networks.html  Multi_Agent_RL.html  Quantum_Annealing.html  README.html  Tensor_Parallelism.html  TimeGAN .html  feature_engineering_us.html
0掘金+万得+聚宽多因子策略开发框架/掘金多因子开发测试/算法编写模板/ARMA/: test.html
0量化打板策略/: README.html  README.md  pyproject.toml  requirements.txt  打板策略.py  策略数据初始化.py
0量化打板策略/选股/舆情选股/: all_stock_names.txt  big_model_stock_poll.txt
0量化打板策略/选股/量价选股/: README.html  config.json  wencai_stock_poll.txt
0量化打板策略/配置文件/: 20241220-limit_up_prices.json  config.ini  股票池.txt
_sources/: 00QC.ipynb  README.md  intro.ipynb  nb2022.ipynb  nb2024.ipynb
_static/: custom.css
easyquant/: README.html
(+38 files in other folders)
